ADD float pkg fuer H Option in figures

--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -16,6 +16,7 @@
 \usepackage{tabularx} % Tabellen mit bestimmtem Breitenverhältnis der Spalten
 \usepackage{wrapfig} % Textumlauf um Bilder
 \usepackage{todonotes}
+\usepackage{float} % fuer H Option bei figures
 
 \renewcommand{\texteuro}{\euro}
 
