--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -132,28 +132,28 @@ TODO siehe Anleitung
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{festool_bilder_1Teil1.pdf}
-	\caption{Foto der Schaltung und des fertigen Gehäuses}
+	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{festool_bilder_1Teil2.pdf}
-	\caption{Foto der Schaltung und des fertigen Gehäuses}
+	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{festool_bilder_2Teil1.pdf}
-	\caption{Foto der Schaltung und des fertigen Gehäuses}
+	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{festool_bilder_2Teil2.pdf}
-	\caption{Foto der Schaltung und des fertigen Gehäuses}
+	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
@@ -161,7 +161,8 @@ TODO siehe Anleitung
 \newpage
 \section{Quellen}
 \begin{itemize}
-\item Festool Bedienungsanleitung TS 55 REBQ
+\item Festool \glqq Originalbetriebsanleitung\grqq TS 55 REBQ unter 
+\url{http://www.etracker.de/lnkcnt.php?et=6hsNGE&url=https\%3a\%2f\%2fassets.festool.com\%2fmedia\%2f706758_002_ts55rebq.zip&lnkname=Bedienungsanleitung+TS+55}
 \end{itemize}
 
 \end{document}
