Bilder-PDFs in Ordner img/ verschoben

--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -131,28 +131,28 @@ TODO siehe Anleitung
 \section{Zeichnungen}
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth]{festool_bilder_1Teil1.pdf}
+	\includegraphics[width=1\textwidth]{img/festool_bilder_1Teil1.pdf}
 	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth]{festool_bilder_1Teil2.pdf}
+	\includegraphics[width=1\textwidth]{img/festool_bilder_1Teil2.pdf}
 	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth]{festool_bilder_2Teil1.pdf}
+	\includegraphics[width=1\textwidth]{img/festool_bilder_2Teil1.pdf}
 	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth]{festool_bilder_2Teil2.pdf}
+	\includegraphics[width=1\textwidth]{img/festool_bilder_2Teil2.pdf}
 	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
