--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -122,28 +122,28 @@ TODO siehe Anleitung
 TODO siehe Anleitung
 
 \section{Zeichnungen}
-\begin{figure}[H]
+\begin{figure}[h]
 	\centering
 %	\includegraphics[width=1\textwidth]{img/festool_bilder_1Teil1.pdf}
 	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[h]
 	\centering
 %	\includegraphics[width=1\textwidth]{img/festool_bilder_1Teil2.pdf}
 	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[h]
 	\centering
 %	\includegraphics[width=1\textwidth]{img/festool_bilder_2Teil1.pdf}
 	\caption{}
 	\label{fig:gehaeuse_oben}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[h]
 	\centering
 %	\includegraphics[width=1\textwidth]{img/festool_bilder_2Teil2.pdf}
 	\caption{}
