Sicherheitshinweise etwas umformuliert und gruppiert

--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -38,29 +38,40 @@
 \color{black}
 
 \section[Allgemeine Sicherheitshinweise]{Allgemeine Sicherheitshinweise}
+
+Dieser Abschnitt nennt die wichtigsten Gefahren und Sicherheitsregeln.
+
+\textbf{Gefahr durch das Sägeblatt: Sägen von Fingern, Beinen, der Arbeitsplatte, ...}
 \begin{itemize}
 \item Hände bei aktiver Säge immer vom Sägebereich und dem Sägeblatt fernhalten. Die Kreissäge immer mit beiden Händen halten, entweder am Zusatzgriff oder dem Motorgehäuse. Wenn beide Hände die Kreissäge halten, kann das Sägeblatt diese nicht verletzen.
 
 \item Nicht unter das Werkstück greifen. Die Schutzhaube kann unterhalb des Werkstückes nicht vor dem Sägeblatt schützen.
 
-\item Die Schnitttiefe an die Dicke des Werkstücks anpassen. Es sollte weniger als eine volle Zahnhöhe unter dem Werkstück sichtbar sein.
+\item Die Schnitttiefe an die Dicke des Werkstücks anpassen. Es sollte weniger als eine volle Zahnhöhe unter dem Werkstück sichtbar sein. Es darf nicht tiefer als etwa 1\,mm in den Festool-Arbeitstisch gesägt werden.
 
-\item Das zu sägende Werkstück niemals in der Hand oder über dem Bein halten. Das Werkstück stabil und sicher fixieren. Es ist wichtig, das Werkstück gut zu befestigen,
-um die Gefahr von Körperkontakt, Klemmen des Sägeblattes oder Verlust der Kontrolle zu minimieren.
+\item Das zu sägende Werkstück niemals in der Hand oder über dem Bein halten.
 
 \item Auf keinen Fall so sägen, dass das Stromkabel getroffen werden kann. Die Metallteile des Elektrowerkzeugs könnten sonst unter Spannung stehen und einen elektrischen Schlag verursachen.
-
-\item Beim Schneiden immer einen Anschlag oder eine gerade Kantenführung verwenden. Dies verbessert die Schnittgenauigkeit und verringert die Möglichkeit, dass das Sägeblatt klemmt.
-
-\item Nur Sägeblätter in der richtigen Größe und mit passender Aufnahmebohrung (z.B. sternförmig oder rund) verwenden. Sägeblätter, die nicht zu den Montageteilen der Säge passen, laufen unrund und führen zum Verlust der Kontrolle oder beschädigen die Säge.
-
-\item Niemals beschädigte oder falsche Sägeblatt-Spannflansche oder -Schrauben verwenden. Die Sägeblatt-Spannflansche und Schrauben wurden speziell für diese Säge konstruiert, für optimale Leistung und Betriebssicherheit.
-
-\item Im Arbeitsbereich dürfen sich keine Unbeteiligten befinden
 \end{itemize}
 
+\textbf{Gefahr des Wegschleuderns von Werkstückteilen, Wegspringens der Säge}
+\begin{itemize}
+\item Das Werkstück stabil und sicher fixieren, z.\,B. mit Schraubzwingen auf dem Festool Arbeitstisch. Dies ist wichtig,
+um die Gefahr von Körperkontakt, Klemmen des Sägeblattes oder Verlust der Kontrolle zu minimieren.
 
-\section{Schutzausrüstung}
+\item Immer die Führungsschiene verwenden. Soweit möglich, diese mit Schraubzwingen am Werkstück oder Arbeitstisch befestigen. Dies verbessert die Schnittgenauigkeit und verringert die Möglichkeit, dass das Sägeblatt klemmt.
+
+\item Nur passende Sägeblätter und -Spannflansche von Festool verwenden (siehe Bedienungsanleitung).
+
+\item Im Arbeitsbereich dürfen sich keine Unbeteiligten befinden. Die Benutzung innerhalb des FabLabs während normaler Öffnungszeiten ist also nicht möglich.
+\end{itemize}
+
+\textbf{Gesundheitsgefahr durch Holzstaub}
+\begin{itemize}
+	\item Immer Staubsauger anschließen. Nur den für Holzstaub zugelassenen Festool Staubsauger verwenden.
+\end{itemize}
+
+\subsection{Schutzausrüstung}
 
 \begin{itemize}
 \item Gehörschutz
@@ -70,13 +81,10 @@ um die Gefahr von Körperkontakt, Klemmen des Sägeblattes oder Verlust der Kont
 \end{itemize}
 
 \section{Bestimmungsgemäße Verwendung}
-Tauchsägen sind bestimmungsgemäß zum Sägen von Holz, holzähnlichen Werkstoffen, gips- und zementgebundenen Faserstoffen sowie Kunststoffen vorgesehen. Mit den von Festool angebotenen Spezialsägeblättern für Aluminium können die Maschinen auch zum Sägen von Aluminium verwendet werden. Es dürfen nur Sägeblätter mit folgenden Daten verwendet werden
+Tauchsägen sind bestimmungsgemäß zum Sägen von Holz, holzähnlichen Werkstoffen, gips- und zementgebundenen Faserstoffen sowie Kunststoffen vorgesehen. Mit den von Festool angebotenen Spezialsägeblättern für Aluminium können die Maschinen auch zum Sägen von Aluminium verwendet werden. Es dürfen nur Sägeblätter gemäß der Bedienungsanleitung verwendet werden.
 \begin{itemize}
-\item Sägeblattdurchmesser 160 mm;
-\item Schnittbreite 2,2 mm; Aufnahmebohrung 20 mm;
-\item Stammblattdicke max. 1,8 mm; geeignet für Drehzahlen bis 9500 min-1. Keine Schleifscheiben einsetzen.
-\item Die Kreissäge darf ausschließlich von eingewiesene Personen verwendet werden.
-\item Für die Verwendung der Kreissäge im Arbeitstisch ist eine gesonderte Einweisung erforderlich.
+\item Die Tauchsäge darf ausschließlich von eingewiesenen Personen verwendet werden.
+\item Diese Einweisung bezieht sich auf die Verwendung als Tauchsäge mit Führungsschiene zum Zersägen von Plattenmaterial, Holzlatten und ähnlichem. Andere Einsätze, etwa die freihändige Benutzung, sind nicht gestattet --- dafür ist eine gesonderte \textbf{schriftliche} Einweisung erforderlich.
 \end{itemize}
 
 \subsection{Aluminiumbearbeitung}
@@ -85,7 +93,7 @@ Bei der Bearbeitung von Aluminium sind aus Sicherheitsgründen folgende besonder
 \item Maschine an ein geeignetes Absauggerät anschließen.
 \item Maschine regelmäßig von Staubablagerungen im Motorgehäuse reinigen.
 \item Nur Aluminium-Sägeblätter verwenden.
-\item Sichtfenste/ den Spanflugschutz schließen.
+\item Sichtfenster / den Spanflugschutz schließen.
 \end{itemize}
 
 
