--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -43,15 +43,17 @@ Dieser Abschnitt nennt die wichtigsten Gefahren und Sicherheitsregeln.
 
 \textbf{Gefahr durch das Sägeblatt: Sägen von Fingern, Beinen, der Arbeitsplatte, ...}
 \begin{itemize}
-\item Hände bei aktiver Säge immer vom Sägebereich und dem Sägeblatt fernhalten. Die Kreissäge immer mit beiden Händen halten, entweder am Zusatzgriff oder dem Motorgehäuse. Wenn beide Hände die Kreissäge halten, kann das Sägeblatt diese nicht verletzen.
+\item Hände bei aktiver Säge immer vom Sägebereich und dem Sägeblatt fernhalten. Die Kreissäge immer mit beiden Händen halten. Wenn beide Hände die Kreissäge halten, kann das Sägeblatt diese nicht verletzen.
 
 \item Nicht unter das Werkstück greifen. Die Schutzhaube kann unterhalb des Werkstückes nicht vor dem Sägeblatt schützen.
 
-\item Die Schnitttiefe an die Dicke des Werkstücks anpassen. Es sollte weniger als eine volle Zahnhöhe unter dem Werkstück sichtbar sein. Es darf nicht tiefer als etwa 1\,mm in den Festool-Arbeitstisch gesägt werden.
+\item Die Schnitttiefe an die Dicke des Werkstücks anpassen. Es sollte weniger als eine volle Zahnhöhe unter dem Werkstück sichtbar sein. Es darf nicht tiefer als 1\,mm in den Festool-Arbeitstisch gesägt werden.
 
-\item Das zu sägende Werkstück niemals in der Hand oder über dem Bein halten.
+\item Das Werkstück muss fest und sicher verspannt sein.
 
 \item Auf keinen Fall so sägen, dass das Stromkabel getroffen werden kann. Die Metallteile des Elektrowerkzeugs könnten sonst unter Spannung stehen und einen elektrischen Schlag verursachen.
+
+\item Bei beschädigtem Stromkabel die Arbeit sofort beenden, Stecker ziehen und gegen ein intaktes auswechseln.
 \end{itemize}
 
 \textbf{Gefahr des Wegschleuderns von Werkstückteilen, Wegspringens der Säge}
