--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -56,37 +56,38 @@ Dieser Abschnitt nennt die wichtigsten Gefahren und Sicherheitsregeln.
 \item Bei beschädigtem Stromkabel die Arbeit sofort beenden, Stecker ziehen und gegen ein intaktes auswechseln.
 \end{itemize}
 
-\textbf{Gefahr des Wegschleuderns von Werkstückteilen, Wegspringens der Säge}
+\textbf{Gefahr des Wegschleuderns von Werkstückteilen, Rückschlagen der Säge}
 \begin{itemize}
 \item Das Werkstück stabil und sicher fixieren, z.\,B. mit Schraubzwingen auf dem Festool Arbeitstisch. Dies ist wichtig,
 um die Gefahr von Körperkontakt, Klemmen des Sägeblattes oder Verlust der Kontrolle zu minimieren.
 
-\item Immer die Führungsschiene verwenden. Soweit möglich, diese mit Schraubzwingen am Werkstück oder Arbeitstisch befestigen. Dies verbessert die Schnittgenauigkeit und verringert die Möglichkeit, dass das Sägeblatt klemmt.
+\item Immer die Führungsschiene verwenden. Soweit möglich, diese mit den dafür vorgesehenen Schraubzwingen am Werkstück oder Arbeitstisch befestigen. Dies verbessert die Schnittgenauigkeit und verringert die Möglichkeit, dass das Sägeblatt klemmt.
 
 \item Nur passende Sägeblätter und -Spannflansche von Festool verwenden (siehe Bedienungsanleitung).
 
-\item Im Arbeitsbereich dürfen sich keine Unbeteiligten befinden. Die Benutzung innerhalb des FabLabs während normaler Öffnungszeiten ist also nicht möglich.
+\item Im Arbeitsbereich dürfen sich keine Unbeteiligten befinden. Die Benutzung innerhalb des FabLabs während normaler Öffnungszeiten ist nicht möglich.
 \end{itemize}
 
 \textbf{Gesundheitsgefahr durch Holzstaub}
 \begin{itemize}
 	\item Immer Staubsauger anschließen. Nur den für Holzstaub zugelassenen Festool Staubsauger verwenden.
+	\item Bei Hartholz ist eine Staubmaske zu tragen.
 \end{itemize}
 
 \subsection{Schutzausrüstung}
 
 \begin{itemize}
-\item Gehörschutz
-\item Schutzbrille
-\item Staubmaske bei stauberzeugenden Arbeiten 
-\item Schutzhandschuhe beim Bearbeiten rauher Materialien und beim Werkzeugwechsel.
+\item Gehörschutz (befindet sich bei der Fräse)
+\item Schutzbrille (neben der Fräse über der Werkbank)
+\item Staubmaske bei stauberzeugenden Arbeiten (insbesondere Hartholz)
+\item Schutzhandschuhe beim Bearbeiten rauer Materialien und beim Werkzeugwechsel tragen.
 \end{itemize}
 
 \section{Bestimmungsgemäße Verwendung}
-Tauchsägen sind bestimmungsgemäß zum Sägen von Holz, holzähnlichen Werkstoffen, gips- und zementgebundenen Faserstoffen sowie Kunststoffen vorgesehen. Mit den von Festool angebotenen Spezialsägeblättern für Aluminium können die Maschinen auch zum Sägen von Aluminium verwendet werden. Es dürfen nur Sägeblätter gemäß der Bedienungsanleitung verwendet werden.
+Tauchsägen sind bestimmungsgemäß zum Sägen von Holz, holzähnlichen Werkstoffen, gips- und zementgebundenen Faserstoffen sowie Kunststoffen vorgesehen. Hierfür ist auf die richtige Auswahl des Sägeblattes zu achten. Mit den von Festool angebotenen Spezialsägeblättern für Aluminium können die Maschinen auch zum Sägen von Aluminium verwendet werden. Es dürfen nur Sägeblätter gemäß der Bedienungsanleitung verwendet werden.
 \begin{itemize}
 \item Die Tauchsäge darf ausschließlich von eingewiesenen Personen verwendet werden.
-\item Diese Einweisung bezieht sich auf die Verwendung als Tauchsäge mit Führungsschiene zum Zersägen von Plattenmaterial, Holzlatten und ähnlichem. Andere Einsätze, etwa die freihändige Benutzung, sind nicht gestattet --- dafür ist eine gesonderte \textbf{schriftliche} Einweisung erforderlich.
+\item Diese Einweisung bezieht sich auf die Verwendung als Tauchsäge mit Führungsschiene zum Zersägen von Plattenmaterial, Holzlatten und ähnlichem. Andere Einsätze, etwa die freihändige Benutzung, sind nicht gestattet.
 \end{itemize}
 
 \subsection{Aluminiumbearbeitung}
@@ -101,7 +102,7 @@ Bei der Bearbeitung von Aluminium sind aus Sicherheitsgründen folgende besonder
 
 \section{Inbetriebnahme}
 Maschine vor dem Anschließen und Lösen der Netzanschlussleitung stets ausschalten! Anschließen und Lösen der Netzanschlussleitung siehe Bild [2].
-Schieben Sie die Einschaltsperre nach oben und drücken Sie den Ein-/Ausschalter (drücken= Ein / loslassen = AUS).
+Schieben Sie die Einschaltsperre nach oben und drücken Sie den Ein-/Ausschalter (drücken = Ein / loslassen = AUS).
 Die Betätigung der Einschaltsperre entriegelt die Eintauchvorrichtung. Das Sägeaggregat kann nach unten bewegt werden. Dabei taucht das Sägeblatt aus der Schutzhaube aus.
 
 \section{Einstellungen}
@@ -116,7 +117,7 @@ Die Betätigung der Einschaltsperre entriegelt die Eintauchvorrichtung. Das Säg
 \end{itemize}
 
 \subsection{Schnitttiefe einstellen}
-Die Schnitttiefe lässt sich von 0 - 55 mm am Schnitttiefenanschlag einstellen. Das Sägeaggregat kann nun bis zur eingestellten Schnitttiefe nach unten gedrückt werden. 
+Die Schnitttiefe lässt sich von 0 - 55 mm am Schnitttiefenanschlag einstellen. Das Sägeaggregat kann nun bis zur eingestellten Schnitttiefe nach unten gedrückt werden. Auf der tauchtiefeneinstellung stehen die mm-Angaben mit FS für mit Führschiene.
 \begin{itemize}
 \item Schnitttiefe ohne Führungsschiene: max. 55 mm
 \item Schnitttiefe mit Führungsschiene FS: max. 51 mm
