tiny improvement in facts table

--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -51,7 +51,7 @@ Leistung & $1200\,\mathrm{Watt}$ \\
 Drezahlbereich & $2.000 - 5.800\,\mathrm{min}^{-1}$ \\
 \multirow{2}{*}{Schnitttiefe} & max. $55\,\mathrm{mm}$ \\
              & max. $43\,\mathrm{mm}$ bei 45º\\
-Sägeblattabmessung & $160x2,2x20\,\mathrm{mm}$\\
+Sägeblattabmessung & $160\times 2,2\times 20\,\mathrm{mm}$\\
 \end{tabular}
 
 \section[Allgemeine Sicherheitshinweise]{Allgemeine Sicherheitshinweise}
