--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -70,7 +70,7 @@ Dieser Abschnitt nennt die wichtigsten Gefahren und Sicherheitsregeln.
 
 \item Auf keinen Fall so sägen, dass das Stromkabel getroffen werden kann. Die Metallteile des Elektrowerkzeugs könnten sonst unter Spannung stehen und einen elektrischen Schlag verursachen.
 
-\item Bei beschädigtem Stromkabel die Arbeit sofort beenden, Stecker ziehen und gegen ein intaktes auswechseln.
+\item Bei beschädigtem Stromkabel die Arbeit sofort beenden, Stecker ziehen und Anschlusskabel gegen ein intaktes auswechseln.
 \end{itemize}
 
 \textbf{Gefahr des Wegschleuderns von Werkstückteilen}
@@ -123,17 +123,19 @@ Werkstück verhakt sind.
 
 \textbf{Gesundheitsgefahr durch Holzstaub}
 \begin{itemize}
-	\item Immer Staubsauger anschließen. Nur den für Holzstaub zugelassenen Festool Staubsauger verwenden.
-	\item Bei Hartholz ist eine Staubmaske zu tragen.
+	\item Immer Staubsauger anschließen. Nur den für Staubklasse M zugelassenen Festool Staubsauger verwenden.
+	\item Bei Hartholzbearbeitung im FabLab ist darauf zu achten, dass kein Hartholzstaub entsteht. Falls doch, darf die Arbeit im FabLab nicht fortgesetzt werden. Abhilfe kann ein Umzug nach draußen schaffen.
 \end{itemize}
 
 \subsection{Schutzausrüstung}
 
 \begin{itemize}
 \item Gehörschutz (befindet sich bei der Fräse)
-\item Schutzbrille (neben der Fräse über der Werkbank)
+\item Schutzbrille bei Metallbearbeitung (neben der Fräse über der Werkbank)
 \item Staubmaske bei stauberzeugenden Arbeiten (insbesondere Hartholz)
 \item Schutzhandschuhe beim Bearbeiten rauer Materialien und beim Werkzeugwechsel tragen.
+\item eng anliegende Kleidung ohne Fransen oder Abstehende Elemente wie Kordeln etc. (kann in rotierende Maschine eingezogen werden)
+\item bei längeren Haaren: keine offenen Haare
 \end{itemize}
 
 \section{Bestimmungsgemäße Verwendung}
@@ -149,7 +151,7 @@ Bei der Bearbeitung von Aluminium sind aus Sicherheitsgründen folgende besonder
 \item Maschine an ein geeignetes Absauggerät anschließen.
 \item Maschine regelmäßig von Staubablagerungen im Motorgehäuse reinigen.
 \item Nur Aluminium-Sägeblätter verwenden.
-\item Sichtfenster / den Spanflugschutz schließen.
+\item Sichtfenster / den Spanflugschutz schließen. Schutzbrille oder Schutzschild nutzen!
 \end{itemize}
 
 
@@ -191,11 +193,16 @@ die Elektronik defekt ist, da dies zu überhöhten Drehzahlen führen kann. Eine
 \begin{itemize}
 \item Sanftanlauf: Der elektronisch geregelte Sanftanlauf sorgt für ruckfreien Anlauf des Elektrowerkzeugs.
 \item Konstante Drehzahl: Die Motordrehzahl wird elektronisch konstant gehalten. Dadurch wird auch bei Belastung eine gleichbleibende Schnittgeschwindigkeit erreicht.
-\item Drehzahlregelung: Die Drehzahl lässt sich mit dem Stellrad stufenlos einstellen. Dadurch können die Schnittgeschwindigkeit der jeweiligen Oberfläche optimal angepasst werden 
+\item Drehzahlregelung: Die Drehzahl lässt sich mit dem Stellrad stufenlos einstellen. Siehe Tabelle \ref{fig:drehzahltabelle}.
 \item Temperatursicherung: Bei zu hoher Motortemperatur werden Stromzufuhr und Drehzahl reduziert. Die Maschine läuft nur noch mit verringerter Leistung, um eine rasche Abkühlung durch die Motorlüftung zu ermöglichen. Wenn die Übertemperatur andauert, schaltet die Maschine nach ca. 40 sec komplett ab. Erst nach Abkühlung des Motors ist ein erneutes Einschalten möglich.
 \item Strombegrenzung: Die Strombegrenzung verhindert bei extremer Überlastung eine zu hohe Stromaufnahme. Dies kann zu einer Verringerung der Motordrehzahl führen. Nach Entlastung läuft der Motor sofort wieder an.
 \item Bremse: Die TS 55 REBQ besitzt eine elektronische Bremse. Nach dem Ausschalten wird das Sägeblatt in ca. 2 Sekunden elektronisch zum Stillstand abgebremst.
 \end{itemize}
+
+\centering
+	\includegraphics[width=1\textwidth]{img/Drehzahltabelle.png}
+	\captionof{figure}{Drehzahltabelle für Tauchsäge Festool TS 55 REBQ}
+	\label{fig:drehzahltabelle}
 
 
 \subsection{Schnitttiefe einstellen}
