--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -127,6 +127,8 @@ Werkstück verhakt sind.
 	\item Bei Hartholzbearbeitung im FabLab ist darauf zu achten, dass kein Hartholzstaub entsteht. Falls doch, darf die Arbeit im FabLab nicht fortgesetzt werden. Abhilfe kann ein Umzug nach draußen schaffen.
 \end{itemize}
 
+\textbf{Wenn bei der Benutzung ein Schaden an der Maschine entsteht, ist dieser und der Hergang unverzüglich über Mail an fablab-aktive@fablab.fau.de zu mailen!}
+
 \subsection{Schutzausrüstung}
 
 \begin{itemize}
