Groß/kleinschreibung Dateinamen repariert

--- a/einweisung_Kreissaege.tex
+++ b/einweisung_Kreissaege.tex
@@ -202,7 +202,7 @@ die Elektronik defekt ist, da dies zu überhöhten Drehzahlen führen kann. Eine
 \end{itemize}
 
 \centering
-	\includegraphics[width=1\textwidth]{img/Drehzahltabelle.png}
+	\includegraphics[width=1\textwidth]{img/drehzahltabelle.png}
 	\captionof{figure}{Drehzahltabelle für Tauchsäge Festool TS 55 REBQ}
 	\label{fig:drehzahltabelle}
 
